--- a/estevan-hub/package.json
+++ b/estevan-hub/package.json
@@ -1,12 +1,11 @@
 {
   "name": "estevan-hub",
   "version": "1.0.0",
-  "description": "Plataforma completa de marketing digital com simulador de campanhas, gestão de conteúdo e área administrativa",
+  "description": "Plataforma de Marketing Digital",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "marketing",
@@ -20,12 +19,17 @@
   "author": "Estevan Hub",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.5",
-    "dotenv": "^16.3.1",
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.5",
     "pg": "^8.11.3",
-    "mongoose": "^8.0.3"
+    "sanitize-html": "^2.11.0",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
